--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "eas-cli": "^0.60.0",
     "expo": "~46.0.7",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.4",
     "firebase": "^9.9.2",
     "module-resolver": "^1.0.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-maps": "0.31.1",
     "react-native-paper": "^4.12.4",
-    "expo-updates": "~0.14.4"
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
