--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.4",
     "firebase": "^9.9.2",
+    "lodash": "^4.17.21",
     "module-resolver": "^1.0.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
@@ -25,6 +26,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1"
   },
